Editor: Set tabsettings on new generic highlighter.

Task-number: QTCREATORBUG-12172
Change-Id: I5194da0f6c8c1c453906c9752fc2fdf0e8b0b1be
Reviewed-by: Christian Stenger <christian.stenger@digia.com>