src/plugins/texteditor/plaintexteditor.cpp
@@ -133,6 +133,7 @@ void PlainTextEditorWidget::configure(const QString &mimeType)
 void PlainTextEditorWidget::configure(const MimeType &mimeType)
 {
     Highlighter *highlighter = new Highlighter();
+    highlighter->setTabSettings(baseTextDocument()->tabSettings());
     baseTextDocument()->setSyntaxHighlighter(highlighter);
 
     setCodeFoldingSupported(false);
